--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.20.4",
+    "objection": "^2.0.7",
     "pg": "^7.15.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.3"
